--- a/resources/products.css
+++ b/resources/products.css
@@ -554,6 +554,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    display: none;
 }
 
 #canc {
@@ -1040,6 +1041,7 @@
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
+    display: none;
 }
 
 
@@ -1259,7 +1261,7 @@
 
 .comboAdd-form-cont {
     z-index: 5;
-    /* display: none;6 */
+    display: none;
     position: absolute;
     top: 60%;
     left: 50%;
@@ -1382,6 +1384,10 @@
 }
 
 #comboDP {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
     border-radius: 50%;
     height: 10rem;
 }
