--- a/resources/overview.css
+++ b/resources/overview.css
@@ -13,6 +13,14 @@
 
 .summary_show li,
 
+.data-FLW ,
+.data-FLD{
+    font-size: .8rem;
+}
+.data-FLW b,
+.data-FLD b{
+    font-weight: 100;
+}
 .dashboard_body li {
     position: relative;
 
@@ -70,8 +78,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border: solid 1px rgb(160 160 160 / 35%);
-    background: linear-gradient(145deg, #cacaca, #fcfcfc);
+    border: solid 1px rgb(49 49 49 / 35%);
+    background: white;
     position: relative;
 
 }
@@ -177,8 +185,8 @@
     padding: 1rem;
     width: 40rem;
     border-radius: 1rem;
-    border: solid 1px rgb(160 160 160 / 35%);
-    background: linear-gradient(145deg, #cacaca, #fcfcfc);
+    border: solid 1px rgb(49 49 49 / 35%);
+    background: white;
 
 }
 
@@ -235,7 +243,7 @@
 
 .dashboard_body #pieChartD,
 .dashboard_body #pieChartWk {
-    background: linear-gradient(145deg, #cacaca, #fcfcfc);
+    background: white;
     min-width: 10rem;
     max-width: 20rem;
     max-height: 12rem;
@@ -248,7 +256,7 @@
     max-height: 25rem;
     position: relative;
     border: none;
-    background: linear-gradient(145deg, #cacaca, #fcfcfc);
+    background: white;
 
 }
 
@@ -315,8 +323,8 @@
 .pieSum>*:nth-child(1),
 .pieSum>*:nth-child(2) {
     display: grid;
-    border: solid 1px rgb(160 160 160 / 35%);
-    background: linear-gradient(145deg, #cacaca, #fcfcfc);
+    border: solid 1px rgb(49 49 49 / 35%);
+    background: white;
 
 }
 
@@ -394,8 +402,8 @@
 
 .sales-sum-inn,
 .top-prod-inn {
-    border: solid 1px rgb(160 160 160 / 35%);
-    background: linear-gradient(145deg, #cacaca, #fcfcfc);
+    border: solid 1px rgb(49 49 49 / 35%);
+    background: white;
     border-radius: .7rem;
     padding: 1rem;
     overflow: hidden;
@@ -473,9 +481,9 @@
 }
 
 .sales-sum-inn::after {
-    top: 1rem;
-    width: 9rem;
-    height: 9rem;
+    top: -1rem;
+    width: 15rem;
+    height: 15rem;
     left: 1rem;
 }
 
@@ -605,6 +613,22 @@
 
 
 
+@media screen and (max-width :1508px) {
+    .pieSum {
+        justify-content: start;
+    }
+    
+    
+    
+}
+@media screen and (max-width :1147px) {
+    .pieSum {
+        justify-content: center;
+    }
+
+
+
+}
 @media screen and (max-width :1041px) {
     .data_from_graphical {
         width: 100%;
